<resources>
    <string name="app_name">Grand50</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello!</string>
    <string name="register_now">Register Now</string>
    <string name="lets_register">Let\'s Register right now. Just put your Name, Email, and Password.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="terms_and_cond">Terms and Privacy Policy</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="lets_login">Let\'s Log in right now. Just put your Email and Password.</string>
    <string name="sfcc" translatable="false">Grand50</string>
    <string name="balance">Balance:</string>
    <string name="ethereum" translatable="false">Ethereum</string>
    <string name="eth" translatable="false">ETH</string>
    <string name="erc20" translatable="false">ERC20</string>
    <string name="tokens">Tokens</string>
    <string name="coin">Coin</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="transfer_eth">Transfer Ethereum</string>
    <string name="recepient_address">Recipient Address</string>
    <string name="total_to_transfer">Total to transfer</string>
    <string name="amount">Amount :</string>
    <string name="fee">FEE :</string>
    <string name="available_eth">Available Ethereum</string>
    <string name="reveive_eth">Reveive Ethereum</string>
    <string name="copy_address">Copy Address</string>
    <string name="transaction">Transactions</string>
    <string name="transfer">Transfer</string>
    <string name="buy">Buy</string>
    <string name="buy_token">Buy Token</string>
    <string name="token_currency_converter">Token Currency Converter</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="converted_token">Converted Token</string>
    <string name="send_eth_to_buy_token">Send ethereum to buy token</string>
    <string name="sfcc_token" translatable="false">Grand50 TOKEN</string>
    <string name="krw_token" translatable="false">KRW TOKEN</string>
    <string name="enable_pin_code">Enable Pin Code</string>
    <string name="user_details">User Details</string>
    <string name="logout">Logout</string>
    <string name="v" translatable="false">v</string>
    <string name="build" translatable="false">build</string>
    <string name="pincode">Pincode</string>
    <string name="enable_wallet_pincode">Enable Wallet Pin Code</string>
    <string name="update_wallet_pincode">Update Wallet Pin Code</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="enter_old_pincode">Enter old pincode</string>
    <string name="enter_new_pincode">Enter new pincode</string>
    <string name="set">Set</string>
    <string name="total">Total</string>
    <string name="receive_eth">Receive Ethereum</string>
    <string name="settings">Settings</string>
    <string name="send_sfcc">Send Grand50</string>
    <string name="confirm_pincode">Confirm Pincode</string>
    <string name="balance_">Balance</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="grand50" translatable="false">Grand50</string>
    <string name="enter_email">Enter Email</string>
    <string name="ex_mail" translatable="false">ex : abc@mail.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="did_not_receive_email">Did not receive email?</string>
    <string name="email_verification">We have sent you an email for verification</string>

</resources>
