<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_pincode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/screen_background"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center_vertical"
        android:scaleType="center"
        android:text="@string/pincode"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pin_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/enter_pincode"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <EditText
        android:id="@+id/c_pin_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/confirm_pincode"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_code" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/set"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_pin_code" />


    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_set"
        app:layout_constraintTop_toBottomOf="@+id/c_pin_code" />


</androidx.constraintlayout.widget.ConstraintLayout>