<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_pincode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/screen_background"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center_vertical"
        android:scaleType="center"
        android:text="PinCode"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pin_code_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView25"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/enter_old_pincode"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <EditText
        android:id="@+id/pin_code_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_code_old"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/enter_new_pincode"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_old" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_code_new"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/pin_code_new"
        app:layout_constraintStart_toStartOf="@+id/pin_code_new"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_new">

        <Button
            android:id="@+id/btn_set_new_pin"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/set"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_cancel_change_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>