<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/screen_background"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textview_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/header1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/hello"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/header3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/welcome_back"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header1" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/lets_login"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_editText_view"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editText_view"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_view"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_light"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_view"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_view" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv" />

    <TextView
        android:id="@+id/email_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_not_receive_email"
        android:textColor="@color/colorWhite"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>