<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:background="@color/screen_background"
    android:fitsSystemWindows="true"
    tools:context=".fragments.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/screen_background"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/settings"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_detail_btn" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/pin_code_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/enable_pin_code"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_detail_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/user_details"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_code_btn" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/grand50"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_logout" />


            <TextView
                android:id="@+id/version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>